infrastructure/networking/traefik-config/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: traefik
  name: traefik-dashboard-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-traefik-dashboard-basic-auth@kubernetescrd
    cert-manager.io/cluster-issuer: cluster-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.makerspace.local
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.makerspace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
